<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">工厂设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="default_value">255 255 255 255</string>
	<string name="reset">reset</string>
	<string name="save">save</string>
	<string name="ok">OK</string>
	<string name="num0">0</string>
	<string name="num1">1</string>
	<string name="num2">2</string>
	<string name="num3">3</string>
	<string name="num4">4</string>
	<string name="num5">5</string>
	<string name="num6">6</string>
	<string name="num7">7</string>
	<string name="num8">8</string>
	<string name="num9">9</string>
	
	<string name="desc">方控学习方法:按住原车方控按键,再点击屏幕相应按钮,数值改变后学习完成,松开原车按键</string>
	<string name="desc2">ZYST_DaZhong9_byHT_T0207-MST2531</string>
</resources>
